Wrapper eksisterende endepunkt i LovvalgsperiodeTjeneste i ResponseEntity