@@ -3,7 +3,6 @@ package no.nav.melosys.tjenester.gui;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -37,37 +36,37 @@ public class LovvalgsperiodeTjeneste {
 
     @GetMapping("{behandlingID}")
     @ApiOperation(value = "Henter en lovvalgsperiode for en gitt behandling", response = LovvalgsperiodeDto.class)
-    @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
-    public ResponseEntity hentLovvalgsperioder(@PathVariable("behandlingID") long behandlingID) {
+    @ApiResponses({@ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.")})
+    public ResponseEntity<Collection<LovvalgsperiodeDto>> hentLovvalgsperioder(@PathVariable("behandlingID") long behandlingID) {
         aksesskontroll.autoriser(behandlingID);
         Collection<LovvalgsperiodeDto> resultat = lovvalgsperiodeService
-                .hentLovvalgsperioder(behandlingID)
-                .stream()
-                .map(LovvalgsperiodeDto::av)
-                .collect(Collectors.toList());
+            .hentLovvalgsperioder(behandlingID)
+            .stream()
+            .map(LovvalgsperiodeDto::av)
+            .toList();
         return ResponseEntity.ok(resultat);
     }
 
     @PostMapping("{behandlingID}")
     @ApiOperation("Lagrer en lovvalgsperiode for en gitt behandling.")
-    @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
-    public Collection<LovvalgsperiodeDto> lagreLovvalgsperioder(@PathVariable("behandlingID") long behandlingsid,
-            @RequestBody Collection<LovvalgsperiodeDto> lovvalgsperiodeDtoer) {
+    @ApiResponses({@ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.")})
+    public ResponseEntity<Collection<LovvalgsperiodeDto>> lagreLovvalgsperioder(@PathVariable("behandlingID") long behandlingsid,
+                                                                                @RequestBody Collection<LovvalgsperiodeDto> lovvalgsperiodeDtoer) {
         aksesskontroll.autoriserSkriv(behandlingsid);
         List<Lovvalgsperiode> lovvalgsperioder = lovvalgsperiodeDtoer.stream()
-                .map(LovvalgsperiodeDto::til)
-                .collect(Collectors.toList());
+            .map(LovvalgsperiodeDto::til)
+            .toList();
         lovvalgsperiodeService.lagreLovvalgsperioder(behandlingsid, lovvalgsperioder);
-        return lovvalgsperiodeDtoer;
+        return ResponseEntity.ok(lovvalgsperiodeDtoer);
     }
 
     @GetMapping("{behandlingID}/opprinnelig")
-    @ApiOperation(value = "Henter den opprinnelig lovvalgsperioden en replikert avsluttet behandling har", response = LovvalgsperiodeDto.class)
-    @ApiResponses({ @ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.") })
-    public Map<String, PeriodeDto> hentOpprinneligLovvalgsperiode(@PathVariable("behandlingID") long behandlingID) {
+    @ApiOperation(value = "Henter den opprinnelig lovvalgsperioden en replikert avsluttet behandling har")
+    @ApiResponses({@ApiResponse(code = 404, message = "Dersom behandlingsid-en ikke fins.")})
+    public ResponseEntity<Map<String, PeriodeDto>> hentOpprinneligLovvalgsperiode(@PathVariable("behandlingID") long behandlingID) {
         aksesskontroll.autoriser(behandlingID);
         var lovvalgsperiode = lovvalgsperiodeService.hentOpprinneligLovvalgsperiode(behandlingID);
         var periodeDto = new PeriodeDto(lovvalgsperiode.getFom(), lovvalgsperiode.getTom());
-        return Map.of("opprinneligLovvalgsperiode", periodeDto);
+        return ResponseEntity.ok(Map.of("opprinneligLovvalgsperiode", periodeDto));
     }
 }
